src/objects/Sector__c.object
<CustomObject>
    <description>To capture Sector information to allow for processing of parking eligibility.</description>
    <fields>
        <fullName>Business_Park__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Park</label>
        <referenceTo>Business_Park__c</referenceTo>
        <relationshipLabel>Sectors</relationshipLabel>
        <relationshipName>Sectors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Sector_Parkings__c</fullName>
        <label>Number of Sector Parkings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Parking_Available_c__c</fullName>
        <label>Paid_Parking_Available__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sector_Yardi_Id__c</fullName>
        <externalId>true</externalId>
        <label>Sector Yardi Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Standard_Area__c</fullName>
        <label>Standard Area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sector</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sector Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sectors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>